syntax = "proto3";
package thesixnetwork.sixprotocol.nftmngr.v091;

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types/v091";
import "nftmngr/v091/nft_data.proto"; 

message NftCollection {
  string nftSchemaCode = 1;
  uint64 total = 2;
  repeated NftData nftDatas = 3; 
  
}

